# pv_cleaning_robot

./: .clang-format  .env.example  .gitignore  API_REFERENCE.md  CMakeLists.txt  CMakePresets.json  README.md  lib.txt
.cache/clangd/index/: main.cc.BB3C8DB62C09E5E7.idx  test_base.cc.28A55B873C8F8ABD.idx
.github/: copilot-instructions.md
.github/prompts/: add-device.prompt.md
.github/skills/embedded-systems/: SKILL.md
cmake/: toolchain.cmake
config/: config.json
doc/: API_REFERENCE.md
doc/IMU协议/: imu.md
doc/dev-guide/: CONCURRENCY.md
doc/电池2bms协议/: modbus协议.csv  数据格式.csv
docs/superpowers/plans/: 2026-04-05-code-optimization.md  2026-04-07-hardware-tests.md  2026-04-08-dead-code-docs-cleanup.md
docs/superpowers/specs/: 2026-04-05-code-optimization-design.md  2026-04-07-hardware-test-design.md
include/pv_cleaning_robot/app/: clean_task.h  fault_handler.h  robot_fsm.h  watchdog_mgr.h
include/pv_cleaning_robot/device/: bms.h  brush_motor.h  device_error.h  gps_device.h  imu_device.h  limit_switch.h  walk_motor.h  walk_motor_group.h  walk_motor_types.h
include/pv_cleaning_robot/driver/: libgpiod_pin.h  libmodbus_master.h  libserialport_port.h  linux_can_socket.h  pi_mutex.h
include/pv_cleaning_robot/hal/: i_can_bus.h  i_gpio_pin.h  i_modbus_master.h  i_serial_port.h  pi_mutex.h
include/pv_cleaning_robot/middleware/: data_cache.h  event_bus.h  i_network_transport.h  logger.h  lorawan_transport.h  mqtt_transport.h  network_manager.h  ota_manager.h  safety_monitor.h  thread_executor.h
include/pv_cleaning_robot/protocol/: bms2_protocol.h  bms_protocol.h  imu_protocol.h  nmea_parser.h  walk_motor_can_codec.h
include/pv_cleaning_robot/service/: cloud_service.h  config_service.h  diagnostics_collector.h  fault_service.h  heading_pid_controller.h  health_service.h  motion_service.h  nav_service.h  scheduler_service.h
pv_cleaning_robot/: CMakeLists.txt  main.cc
pv_cleaning_robot/app/: clean_task.cc  fault_handler.cc  robot_fsm.cc  watchdog_mgr.cc
pv_cleaning_robot/device/: bms.cc  brush_motor.cc  gps_device.cc  imu_device.cc  limit_switch.cc  walk_motor.cc  walk_motor_group.cc
pv_cleaning_robot/driver/: libgpiod_pin.cc  libmodbus_master.cc  libserialport_port.cc  linux_can_socket.cc
pv_cleaning_robot/middleware/: data_cache.cc  logger.cc  lorawan_transport.cc  mqtt_transport.cc  network_manager.cc  ota_manager.cc  safety_monitor.cc  thread_executor.cc
pv_cleaning_robot/protocol/: bms2_protocol.cc  bms_protocol.cc  imu_protocol.cc  nmea_parser.cc  walk_motor_can_codec.cc
pv_cleaning_robot/service/: cloud_service.cc  config_service.cc  diagnostics_collector.cc  fault_service.cc  heading_pid_controller.cc  health_service.cc  motion_service.cc  nav_service.cc  scheduler_service.cc
test/: CMakeLists.txt  bms2_test.cc  bms_test.cc  driver_libgpiod_pin_test.cc  driver_libserialport_test.cc  driver_linux_can_socket_test.cc  driver_pi_mutex_test.cc  imu_test.cc  test_base.cc  test_main.cc  walk_motor_test.cc
test/app/: fault_handler_test.cc  robot_fsm_test.cc  watchdog_mgr_test.cc
test/device/: bms_device_test.cc  brush_motor_test.cc  gps_device_test.cc  imu_device_test.cc  limit_switch_test.cc  walk_motor_group_test.cc  walk_motor_test.cc
test/driver/: libgpiod_pin_test.cc  libmodbus_test.cc
test/integration/: system_integration_test.cc  task_chain_test.cc
test/integration/hardware/: bms_hw_test.cc  clean_cycle_hw_test.cc  driver_hw_test.cc  full_sweep_hw_test.cc  hw_config.h  hw_test_main.cc  imu_hw_test.cc  limit_switch_hw_test.cc  system_hw_test.cc  walk_motor_group_hw_test.cc  walk_motor_hw_test.cc
test/middleware/: data_cache_test.cc  event_bus_test.cc  safety_monitor_test.cc
test/mock/: mock_brush_motor.h  mock_can_bus.h  mock_gpio_pin.h  mock_gps_device.h  mock_imu_device.h  mock_limit_switch.h  mock_modbus_master.h  mock_serial_port.h  mock_walk_motor_group.h
test/protocol/: bms2_protocol_test.cc  bms_protocol_test.cc  imu_protocol_test.cc  nmea_parser_test.cc  walk_motor_codec_test.cc
test/service/: config_service_test.cc  fault_service_test.cc  heading_pid_test.cc  motion_service_test.cc  scheduler_service_test.cc
